--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HansSites | Personal Profile</title>
 
-    <!-- ▼▼▼ META TAGS FOR SOCIAL MEDIA SHARE PREVIEW ▼▼▼ -->
+    <!-- META TAGS FOR SOCIAL MEDIA SHARE PREVIEW -->
     <meta name="description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-website-url.com/"> <!-- Ganti dengan URL website Anda nanti -->
+    <meta property="og:url" content="https://your-website-url.com/">
     <meta property="og:title" content="HansSites | Personal Profile">
     <meta property="og:description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
-    <meta property="og:image" content="https://your-website-url.com/hanssites-preview.jpg"> <!-- Ganti dengan URL gambar Anda -->
+    <meta property="og:image" content="https://your-website-url.com/hanssites-preview.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-website-url.com/"> <!-- Ganti dengan URL website Anda nanti -->
+    <meta property="twitter:url" content="https://your-website-url.com/">
     <meta property="twitter:title" content="HansSites | Personal Profile">
     <meta property="twitter:description" content="Personal portfolio of Hans, an Accountant and Web & App Developer.">
-    <meta property="twitter:image" content="https://your-website-url.com/hanssites-preview.jpg"> <!-- Ganti dengan URL gambar Anda -->
-    <!-- ▲▲▲ END OF META TAGS ▲▲▲ -->
+    <meta property="twitter:image" content="https://your-website-url.com/hanssites-preview.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -375,6 +374,26 @@
         </div>
     </div>
     
+    <!-- Mobile Bottom Navigation -->
+    <nav class="mobile-nav">
+        <a href="index.html" class="mobile-nav-link active">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="index.html#projects" class="mobile-nav-link">
+            <i class="fas fa-briefcase"></i>
+            <span>Projects</span>
+        </a>
+        <a href="index.html#articles" class="mobile-nav-link">
+            <i class="fas fa-newspaper"></i>
+            <span>Articles</span>
+        </a>
+        <a href="index.html#kontak" class="mobile-nav-link">
+            <i class="fas fa-user"></i>
+            <span>Account</span>
+        </a>
+    </nav>
+
     <script src="script.js"></script>
 
 </body>
