--- a/index.html
+++ b/index.html
@@ -193,8 +193,6 @@
                                 <span>Balance Sheet</span>
                                 <span>Income Statement</span>
                                 <span>Cash Flow Statement</span>
-                                <span>Statement of Changes in Equity</span>
-                                <span>Notes to Financial Statements</span>
                             </div>
                         <a href="project1.html" class="project-link">View Details</a>
                     </div>
@@ -317,9 +315,6 @@
     
     <audio id="background-music" src="background-music.mp3" loop></audio>
 
-    <button id="email-popup-btn" title="Send a Message">
-        <i class="fas fa-envelope"></i>
-    </button>
     <button id="music-toggle-btn" title="Play/Pause Music">
         <i class="fas fa-volume-mute"></i>
     </button>
@@ -376,15 +371,20 @@
     
     <!-- Mobile Bottom Navigation -->
     <nav class="mobile-nav">
-        <a href="index.html" class="mobile-nav-link active">
+        <a href="index.html" class="mobile-nav-link">
             <i class="fas fa-home"></i>
             <span>Home</span>
         </a>
-        <a href="index.html#projects" class="mobile-nav-link">
+        <a href="projects.html" class="mobile-nav-link">
             <i class="fas fa-briefcase"></i>
             <span>Projects</span>
         </a>
-        <a href="index.html#articles" class="mobile-nav-link">
+        <div class="mobile-nav-center">
+            <button id="mobile-email-btn" class="mobile-nav-center-btn" title="Send a Message">
+                <i class="fas fa-envelope"></i>
+            </button>
+        </div>
+        <a href="articles.html" class="mobile-nav-link">
             <i class="fas fa-newspaper"></i>
             <span>Articles</span>
         </a>
