--- a/project5.html
+++ b/project5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Wisata The Ciliwung | HansSites</title>
+    <title>Financial Reporting Project | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Case Study</p>
-                <h1 class="detail-hero-title">Website Wisata The Ciliwung</h1>
+                <h1 class="detail-hero-title">Financial Reporting Suite</h1>
             </div>
         </section>
 
@@ -73,37 +73,37 @@
                 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1618820633426-6b3e9a4a7b3c?q=80&w=2070&auto=format&fit=crop" alt="Pemandangan sungai">
+                        <img src="https://images.unsplash.com/photo-1554224155-1696413565d3?q=80&w=2070&auto=format&fit=crop" alt="Financial reporting documents and charts">
                     </div>
                     <div class="detail-text-column">
                         <h2>Project Overview</h2>
-                        <p>The Ciliwung adalah sebuah proyek website yang bertujuan untuk memperkenalkan dan mempromosikan destinasi wisata yang ada di sepanjang aliran Sungai Ciliwung. Website ini dirancang untuk menjadi panduan digital bagi para wisatawan yang ingin menjelajahi keindahan alam dan budaya di sekitar sungai bersejarah ini.</p>
-                        <p>Dibangun dengan teknologi web dasar seperti HTML, CSS, dan JavaScript, proyek ini fokus pada penyampaian informasi yang jelas, navigasi yang mudah, dan desain yang responsif. Anda dapat mengunjungi situsnya langsung di <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank">https://hansstory7.github.io/The-Ciliwung/</a>.</p>
+                        <p>This project involved designing and implementing a comprehensive financial reporting system for a mid-sized manufacturing company. The primary goal was to automate the generation of key financial statements and provide deeper insights through detailed analysis, moving from manual spreadsheet-based processes to an integrated system.</p>
+                        <p>The solution streamlined data collection from various departments, ensured compliance with IFRS standards, and produced real-time reports accessible to management.</p>
                     </div>
                 </div>
 
                 <div class="competencies-section" style="background-color: transparent; padding: 40px 0;">
-                    <h3 class="subsection-title">Key Features</h3>
+                    <h3 class="subsection-title">Key Components Delivered</h3>
                     <div class="competency-grid">
                         <div class="competency-card">
-                            <i class="fas fa-map-marked-alt"></i>
-                            <h3>Peta Interaktif</h3>
-                            <p>Menampilkan lokasi-lokasi wisata penting di sepanjang sungai untuk kemudahan eksplorasi.</p>
+                            <i class="fas fa-file-invoice-dollar"></i>
+                            <h3>Balance Sheet Automation</h3>
+                            <p>Developed a system to automatically consolidate assets, liabilities, and equity from the general ledger.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-images"></i>
-                            <h3>Galeri Destinasi</h3>
-                            <p>Kumpulan foto dan deskripsi menarik dari setiap tempat wisata yang ditampilkan.</p>
+                            <i class="fas fa-chart-line"></i>
+                            <h3>Income Statement Analysis</h3>
+                            <p>Created dynamic income statements with variance analysis against budget and prior periods.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-mobile-alt"></i>
-                            <h3>Desain Responsif</h3>
-                            <p>Tampilan situs yang dapat beradaptasi dengan baik di berbagai perangkat, dari desktop hingga mobile.</p>
+                            <i class="fas fa-hand-holding-usd"></i>
+                            <h3>Cash Flow Visualization</h3>
+                            <p>Built interactive dashboards to track operating, investing, and financing activities.</p>
                         </div>
                          <div class="competency-card">
-                            <i class="fas fa-info-circle"></i>
-                            <h3>Informasi Praktis</h3>
-                            <p>Menyediakan informasi penting seperti jam buka, harga tiket, dan tips berkunjung untuk wisatawan.</p>
+                            <i class="fas fa-book-open"></i>
+                            <h3>Notes to Financial Statements</h3>
+                            <p>Automated the generation of detailed notes, ensuring consistency and accuracy in disclosures.</p>
                         </div>
                     </div>
                 </div>
@@ -147,4 +147,3 @@
 
 </body>
 </html>
-
