--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <div class="project-info">
                         <h3>Thè Ciliwung Tea Estate</h3>
                         <p>Located in Puncak, Bogor, Thè Ciliwung is a place where time slows down. Built with love and respect for nature, we offer an oasis of tranquility for those who want to escape the hustle and bustle of city life. Every corner is designed to provide maximum comfort and an unforgettable experience.</p>
-                        <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank" class="project-link">Kunjungi Website</a>
+                        <a href="project1.html" class="project-link">View Details</a>
                     </div>
                 </div>
                 <div class="project-card searchable-content">
