--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Wisata The Ciliwung | HansSites</title>
+    <title>The Ciliwung Tourism Website | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -63,7 +63,7 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Case Study</p>
-                <h1 class="detail-hero-title">Website Wisata The Ciliwung</h1>
+                <h1 class="detail-hero-title">The Ciliwung Tourism Website</h1>
             </div>
         </section>
 
@@ -73,12 +73,12 @@
                 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1618820633426-6b3e9a4a7b3c?q=80&w=2070&auto=format&fit=crop" alt="Pemandangan sungai">
+                        <img src="https://images.unsplash.com/photo-1618820633426-6b3e9a4a7b3c?q=80&w=2070&auto=format&fit=crop" alt="River scenery">
                     </div>
                     <div class="detail-text-column">
                         <h2>Project Overview</h2>
-                        <p>The Ciliwung adalah sebuah proyek website yang bertujuan untuk memperkenalkan dan mempromosikan destinasi wisata yang ada di sepanjang aliran Sungai Ciliwung. Website ini dirancang untuk menjadi panduan digital bagi para wisatawan yang ingin menjelajahi keindahan alam dan budaya di sekitar sungai bersejarah ini.</p>
-                        <p>Dibangun dengan teknologi web dasar seperti HTML, CSS, dan JavaScript, proyek ini fokus pada penyampaian informasi yang jelas, navigasi yang mudah, dan desain yang responsif. Anda dapat mengunjungi situsnya langsung di <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank">https://hansstory7.github.io/The-Ciliwung/</a>.</p>
+                        <p>The Ciliwung is a website project aimed at introducing and promoting tourist destinations along the Ciliwung River. This website is designed to be a digital guide for tourists who want to explore the natural beauty and culture around this historic river.</p>
+                        <p>Built with basic web technologies like HTML, CSS, and JavaScript, this project focuses on clear information delivery, easy navigation, and responsive design. You can visit the site directly at <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank">https://hansstory7.github.io/The-Ciliwung/</a>.</p>
                     </div>
                 </div>
 
@@ -87,23 +87,23 @@
                     <div class="competency-grid">
                         <div class="competency-card">
                             <i class="fas fa-map-marked-alt"></i>
-                            <h3>Peta Interaktif</h3>
-                            <p>Menampilkan lokasi-lokasi wisata penting di sepanjang sungai untuk kemudahan eksplorasi.</p>
+                            <h3>Interactive Map</h3>
+                            <p>Displays important tourist locations along the river for easy exploration.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fas fa-images"></i>
-                            <h3>Galeri Destinasi</h3>
-                            <p>Kumpulan foto dan deskripsi menarik dari setiap tempat wisata yang ditampilkan.</p>
+                            <h3>Destination Gallery</h3>
+                            <p>A collection of interesting photos and descriptions of each featured tourist spot.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fas fa-mobile-alt"></i>
-                            <h3>Desain Responsif</h3>
-                            <p>Tampilan situs yang dapat beradaptasi dengan baik di berbagai perangkat, dari desktop hingga mobile.</p>
+                            <h3>Responsive Design</h3>
+                            <p>A site display that adapts well to various devices, from desktop to mobile.</p>
                         </div>
                          <div class="competency-card">
                             <i class="fas fa-info-circle"></i>
-                            <h3>Informasi Praktis</h3>
-                            <p>Menyediakan informasi penting seperti jam buka, harga tiket, dan tips berkunjung untuk wisatawan.</p>
+                            <h3>Practical Information</h3>
+                            <p>Provides important information such as opening hours, ticket prices, and visiting tips for tourists.</p>
                         </div>
                     </div>
                 </div>
@@ -147,4 +147,3 @@
 
 </body>
 </html>
-
