--- a/projects.html
+++ b/projects.html
@@ -78,7 +78,7 @@
                             <p>Located in Puncak, Bogor, Thè Ciliwung is a place where time slows down. Built with love and respect for nature, we offer an oasis of tranquility for those who want to escape the hustle and bustle of city life. Every corner is designed to provide maximum comfort and an unforgettable experience.</p>
                             <div class="project-tags">
                             </div>
-                            <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank" class="project-link">Kunjungi Website</a>
+                            <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank" class="project-link">Visit Website</a>
                         </div>
                     </div>
                     <!-- Project 2 -->
