--- a/project1.html
+++ b/project1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Ciliwung Tourism Website | HansSites</title>
+    <title>Thé Ciliwung Tea Estate | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -63,7 +63,8 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Case Study</p>
-                <h1 class="detail-hero-title">The Ciliwung Tourism Website</h1>
+                <h1 class="detail-hero-title">Thé Ciliwung Tea Estate</h1>
+                <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank" class="cta-button" style="margin-top: 25px;">Visit Website</a>
             </div>
         </section>
 
@@ -73,12 +74,12 @@
                 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1618820633426-6b3e9a4a7b3c?q=80&w=2070&auto=format&fit=crop" alt="River scenery">
+                        <img src="https://images.unsplash.com/photo-1618820633426-6b3e-9a-type a message" alt="Ciliwung river scenery">
                     </div>
                     <div class="detail-text-column">
                         <h2>Project Overview</h2>
-                        <p>The Ciliwung is a website project aimed at introducing and promoting tourist destinations along the Ciliwung River. This website is designed to be a digital guide for tourists who want to explore the natural beauty and culture around this historic river.</p>
-                        <p>Built with basic web technologies like HTML, CSS, and JavaScript, this project focuses on clear information delivery, easy navigation, and responsive design. You can visit the site directly at <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank">https://hansstory7.github.io/The-Ciliwung/</a>.</p>
+                        <p>Thé Ciliwung Tea Estate is a website project aimed at introducing and promoting tourist destinations along the Ciliwung River. The website is designed to be a digital guide for tourists wanting to explore the natural beauty and culture around this historic river.</p>
+                        <p>Built with fundamental web technologies like HTML, CSS, and JavaScript, the project focuses on delivering clear information, easy navigation, and a responsive design. You can visit the live site directly.</p>
                     </div>
                 </div>
 
@@ -88,22 +89,22 @@
                         <div class="competency-card">
                             <i class="fas fa-map-marked-alt"></i>
                             <h3>Interactive Map</h3>
-                            <p>Displays important tourist locations along the river for easy exploration.</p>
+                            <p>Displays key tourist locations along the river for easy exploration.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fas fa-images"></i>
                             <h3>Destination Gallery</h3>
-                            <p>A collection of interesting photos and descriptions of each featured tourist spot.</p>
+                            <p>A collection of attractive photos and descriptions for each featured tourist spot.</p>
                         </div>
                         <div class="competency-card">
                             <i class="fas fa-mobile-alt"></i>
                             <h3>Responsive Design</h3>
-                            <p>A site display that adapts well to various devices, from desktop to mobile.</p>
+                            <p>Ensures the site adapts well to various devices, from desktops to mobile phones.</p>
                         </div>
                          <div class="competency-card">
                             <i class="fas fa-info-circle"></i>
                             <h3>Practical Information</h3>
-                            <p>Provides important information such as opening hours, ticket prices, and visiting tips for tourists.</p>
+                            <p>Provides essential details like opening hours, ticket prices, and travel tips for visitors.</p>
                         </div>
                     </div>
                 </div>
@@ -147,3 +148,4 @@
 
 </body>
 </html>
+
