--- a/project2.html
+++ b/project2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web Design Project | HansSites</title>
+    <title>Hanssites News Blog | HansSites</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -63,7 +63,8 @@
         <section class="detail-hero">
             <div class="container">
                 <p class="detail-hero-subtitle">Case Study</p>
-                <h1 class="detail-hero-title">Web Design Showcase</h1>
+                <h1 class="detail-hero-title">Hanssites News Blog</h1>
+                <a href="https://hanssites.news.blog/" target="_blank" class="cta-button" style="margin-top: 25px;">Visit Website</a>
             </div>
         </section>
 
@@ -73,12 +74,12 @@
                 
                 <div class="detail-main-content">
                     <div class="detail-image-column">
-                        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?q=80&w=2070&auto=format&fit=crop" alt="Modern web design layout on a laptop">
+                        <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?q=80&w=2070&auto=format&fit=crop" alt="Digital news on various screens">
                     </div>
                     <div class="detail-text-column">
                         <h2>Project Overview</h2>
-                        <p>This project involved the complete redesign of a corporate website for a financial services firm. The previous site was outdated and not mobile-friendly. The goal was to create a modern, responsive, and professional online presence that would build trust and effectively communicate the firm's value proposition.</p>
-                        <p>The project utilized modern web technologies like React for a dynamic user interface and Node.js for backend functionalities.</p>
+                        <p>Hanssites News Blog is a personal platform created to share the latest news, in-depth analysis, and personal insights on a variety of topics. The blog aims to be a source of reliable information and thoughtful commentary for its readers.</p>
+                        <p>Developed on a popular blogging platform, the focus was on creating a clean, readable, and easily navigable space where content is the main star. The design prioritizes user experience, ensuring that readers can comfortably engage with the articles on any device.</p>
                     </div>
                 </div>
 
@@ -86,24 +87,24 @@
                     <h3 class="subsection-title">Key Features</h3>
                     <div class="competency-grid">
                         <div class="competency-card">
-                            <i class="fas fa-drafting-compass"></i>
-                            <h3>UI/UX Overhaul</h3>
-                            <p>Conducted user research to develop a clean, intuitive, and user-centric design.</p>
+                            <i class="fas fa-newspaper"></i>
+                            <h3>Topical Articles</h3>
+                            <p>Features well-researched articles on current events, technology, and finance.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fas fa-mobile-alt"></i>
-                            <h3>Responsive Design</h3>
-                            <p>Ensured a seamless experience across all devices, from desktops to smartphones.</p>
+                            <i class="fas fa-pen-nib"></i>
+                            <h3>Personal Commentary</h3>
+                            <p>Offers unique perspectives and analysis, going beyond just reporting the news.</p>
                         </div>
                         <div class="competency-card">
-                            <i class="fab fa-react"></i>
-                            <h3>Interactive Components</h3>
-                            <p>Built with React to create dynamic charts and interactive elements for user engagement.</p>
+                            <i class="fas fa-comments"></i>
+                            <h3>Reader Engagement</h3>
+                            <p>Includes a comments section on each post to foster discussion and community interaction.</p>
                         </div>
                          <div class="competency-card">
-                            <i class="fas fa-tachometer-alt"></i>
-                            <h3>Performance Optimization</h3>
-                            <p>Focused on fast load times and smooth performance to enhance user experience.</p>
+                            <i class="fas fa-search"></i>
+                            <h3>Content Categorization</h3>
+                            <p>Uses tags and categories to organize posts, making it easy for readers to find topics of interest.</p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +118,34 @@
             <p>&copy; 2025 - <img src="logo-hanssites.png" alt="HansSites Logo" class="footer-logo"> HansSites. All rights reserved.</p>
         </div>
     </footer>
+
+    <!-- Mobile Bottom Navigation -->
+    <nav class="mobile-nav">
+        <a href="index.html" class="mobile-nav-link">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </a>
+        <a href="projects.html" class="mobile-nav-link">
+            <i class="fas fa-briefcase"></i>
+            <span>Projects</span>
+        </a>
+        <div class="mobile-nav-center">
+            <button id="mobile-email-btn" class="mobile-nav-center-btn" title="Send a Message">
+                <i class="fas fa-envelope"></i>
+            </button>
+        </div>
+        <a href="articles.html" class="mobile-nav-link">
+            <i class="fas fa-newspaper"></i>
+            <span>Articles</span>
+        </a>
+        <a href="index.html#kontak" class="mobile-nav-link">
+            <i class="fas fa-user"></i>
+            <span>Account</span>
+        </a>
+    </nav>
     
     <script src="script.js"></script>
+
 </body>
 </html>
+
