--- a/projects.html
+++ b/projects.html
@@ -74,20 +74,20 @@
                     <div class="project-card">
                         <img src="coverthumbnail-project1.jpg" alt="Website Wisata">
                         <div class="project-info">
-                            <h3>Thè Ciliwung Tea Estate</h3>
-                            <p>Located in Puncak, Bogor, Thè Ciliwung is a place where time slows down. Built with love and respect for nature, we offer an oasis of tranquility for those who want to escape the hustle and bustle of city life. Every corner is designed to provide maximum comfort and an unforgettable experience.</p>
+                            <h3>Thé Ciliwung Tea Estate</h3>
+                            <p>Located in Puncak, Bogor, Thé Ciliwung is a place where time slows down. Built with love and respect for nature, we offer an oasis of tranquility for those who want to escape the hustle and bustle of city life. Every corner is designed to provide maximum comfort and an unforgettable experience.</p>
                             <div class="project-tags">
                             </div>
-                            <a href="https://hansstory7.github.io/The-Ciliwung/" target="_blank" class="project-link">Visit Website</a>
+                            <a href="project1.html" class="project-link">View Details</a>
                         </div>
                     </div>
                     <!-- Project 2 -->
                     <div class="project-card">
-                        <img src="https://images.unsplash.com/photo-1522199755839-a2bacb67c546?q=80&w=2072&auto=format&fit=crop" alt="Web Design">
+                        <img src="https://images.unsplash.com/photo-1504711434969-e33886168f5c?q=80&w=2070&auto=format&fit=crop" alt="Web Design">
                         <div class="project-info">
-                            <h3>Web Design Showcase</h3>
-                            <p>Creating visually appealing, user-friendly websites with a focus on responsive design and modern UI/UX principles.</p>
-                            <div class="project-tags"><span>React</span><span>Node.js</span><span>UI/UX</span></div>
+                            <h3>Hanssites News Blog</h3>
+                            <p>A personal platform for sharing the latest news, in-depth analysis, and unique insights on a variety of current topics.</p>
+                            <div class="project-tags"><span>Blog</span><span>Content Creation</span></div>
                             <a href="project2.html" class="project-link">View Details</a>
                         </div>
                     </div>
